# CPE793-topics-in-audio-codification

./: .gitignore  README.md  main.tex  references.bib  requirements.txt  testewall.txt
code/: ch2ex8a.ipynb
code/Lista 2/: ch2ex8b.ipynb  ch3ex12a.ipynb  ch3ex12b.ipynb
codec/: CMakeLists.txt  README.md
codec/lib/bitrate/: bitrate.cpp
codec/test/: CMakeLists.txt  README.md  myTest.cpp
exercises/: .gitignore  README.md  requirements.txt
exercises/chap01/: exercises.ipynb
exercises/chap02/: chap2_2_8.ipynb  exercises.ipynb  exercises_chap02.ipynb
exercises/chap02/.ipynb_checkpoints/: exercises_chap02-checkpoint.ipynb
exercises/chap02/samples/: decoded_text.txt  encoded_text.txt  wikipedia_spec.txt
exercises/chap05/: exercises.ipynb  exercises_b.ipynb
exercises/chap06/: chap06_2.ipynb  exercises.ipynb
exercises/chap07/: ex7-12.ipynb  fir_iir.ipynb
exercises/chap08/: ex-8-9-pos-aula.ipynb  ex8-9.ipynb  ex8-Updated.ipynb  ex8.ipynb
exercises/chap08/.ipynb_checkpoints/: ex-8-9-pos-aula-checkpoint.ipynb
py_codec/lib/: bitrate.py
py_codec/test/: test_bitrate.py
style/: head.tex  header.tex
